se modifica archivo .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,10 @@
-PORT=
-MONGO_DB=
+PORT=8080
+MONGO_DB=mongodb+srv://martin:vet123654789@cluster0-iclp1.mongodb.net/veterinaria?retryWrites=true&w=majority
 
 # BCRYPT CONFIGURATION
-BCRYPT_ROUNDS=
+BCRYPT_ROUNDS= 12
 
 #JWT CONFIGURATION
-JWT_LIFETIME=
-JWT_SECRET=
-JWT_ALGORITHM=
+JWT_LIFETIME=36000
+JWT_SECRET="Top Secret"
+JWT_ALGORITHM=HS256
