--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,9 @@
-PORT=8080
-MONGO_DB=mongodb+srv://martin:vet123654789@cluster0-iclp1.mongodb.net/veterinaria?retryWrites=true&w=majority
-
+PORT=
+MONGO_DB=
 # BCRYPT CONFIGURATION
-BCRYPT_ROUNDS= 12
+BCRYPT_ROUNDS= 
 
 #JWT CONFIGURATION
-JWT_LIFETIME=36000
-JWT_SECRET="Top Secret"
-JWT_ALGORITHM=HS256
+JWT_LIFETIME
+JWT_SECRET=
+JWT_ALGORITHM=
