--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^5.9.15",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
