--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.3.1",
     "mongoose": "^5.9.15",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.10",
