subiendo datos de .env

--- a/.example.env
+++ b/.example.env
@@ -1,18 +1,18 @@
-PORT=
-MONGO_DB=
+PORT=8080
+MONGO_DB=mongodb+srv://martin:vet123654789@cluster0-iclp1.mongodb.net/veterinaria?retryWrites=true&w=majority
 
 # BCRYPT CONFIGURATION
-BCRYPT_ROUNDS= 
+BCRYPT_ROUNDS= 12
 
 #JWT CONFIGURATION
-JWT_LIFETIME=
-JWT_SECRET=
-JWT_ALGORITHM=
+JWT_LIFETIME=36000
+JWT_SECRET="Top Secret"
+JWT_ALGORITHM=HS256
 
 #EMAIL CONFIGURATION 
-EMAIL=
-PASSWORD=
+EMAIL=vet.puerco.arania@gmail.com 
+PASSWORD=srfgnywuibqwptnk
 
 #MERCADO PAGO
-MP_TOKEN=
+MP_TOKEN=TEST-1859809724568806-070321-b98f2a761e7a328671bf10377e9d7e18-177174198
 
